<resources>
    <string name="app_name">流水</string>
    <string name="loginBTNtext">登　录</string>
    <string name="signUp">注册</string>
    <string name="signupBTNtext">注　册</string>
    <string name="logoutBTNtext">退　出</string>
    <string name="welcome">Welcome</string>
    <string name="usernameHint">请输入用户名</string>
    <string name="passwordHint_">请输入密码</string>
    <string name="passwordHint">请输入密码或点击右侧刷脸登陆</string>
    <string name="newpasswordHint">请输入新密码</string>
    <string name="phoneHint">请输入手机号</string>
    <string name="send">发送验证码</string>
    <string name="safecodeHint">请输入验证码</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="loginSuccess">登陆成功</string>
    <string name="signupSuccess">注册成功</string>
    <string name="changeSuccess">修改密码成功</string>
    <string name="usernameError">请输入用户名！</string>
    <string name="passwordError">用户名或密码错误！</string>
    <string name="faceError">识别失败</string>
    <string name="passwordTooShort">密码至少为8位！</string>
    <string name="usernameTaken">该用户名已存在！</string>
    <string name="unknownError">未知错误</string>>
    <string name="phoneError">手机号错误</string>
    <string name="phoneRepeat">手机号已存在</string>
    <string name="internetError">网络错误</string>
    <string name="choosePayMethod">选择账户</string>
    <string name="method">账户</string>
    <string name="bill">账单</string>
    <string name="property">资产</string>
    <string name="chart">图表</string>
    <string name="me">我</string>
    <string name="help">帮助与反馈</string>
    <string name="about">关于流水</string>
    <string name="export">导出账单</string>
    <string name="editprofile">修改资料</string>
    <string name="username">用户名</string>
    <string name="expense">支出</string>
    <string name="income">收入</string>
    <string name="meal">饮食</string>
    <string name="transportation">交通</string>
    <string name="shopping">购物</string>
    <string name="clothes">服饰</string>
    <string name="fruit">水果</string>
    <string name="snack">零食</string>
    <string name="digit">数码</string>
    <string name="amusement">娱乐</string>
    <string name="book">书籍</string>
    <string name="call">通讯</string>
    <string name="gift">礼物</string>
    <string name="house">住房</string>
    <string name="investment">投资</string>
    <string name="makeup">美容</string>
    <string name="medicine">医疗</string>
    <string name="office">办公</string>
    <string name="repair">维修</string>
    <string name="social">社交</string>
    <string name="sport">运动</string>
    <string name="study">学习</string>
    <string name="travel">旅行</string>
    <string name="vegetable">蔬菜</string>
    <string name="wine">烟酒</string>
    <string name="daily">日用</string>
    <string name="salary">工资</string>
    <string name="redpacket">红包</string>
    <string name="parttime">兼职</string>
    <string name="other">其他</string>
    <string name="alipay">支付宝</string>
    <string name="nongye">农业银行</string>
    <string name="jianshe">建设银行</string>
    <string name="wallet">钱包</string>
    <string name="day">日</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="type">类型</string>
    <string name="amount">金额</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="time">时间</string>
    <string name="place">地点</string>
    <string name="note">备注</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="changePhoto">修改头像</string>
    <string name="changeUserName">修改用户名</string>
    <string name="changeFace">修改真实图片</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--service-->
    <string name="service_name">notificationListener</string>
</resources>
