<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/payType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="4"
        android:rowCount="7"
       >

        <TextView
            android:id="@+id/meal"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/meal"
            android:padding="20dp"
            android:text="@string/meal"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/transportation"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/transportation"
            android:padding="20dp"
            android:text="@string/transportation"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/shopping"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/shopping"
            android:padding="20dp"
            android:text="@string/shopping"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/daily"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/daily"
            android:padding="20dp"
            android:text="@string/daily"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/clothes"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/clothes"
            android:padding="20dp"
            android:text="@string/clothes"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/vegetables"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/vegetable"
            android:padding="20dp"
            android:text="@string/vegetable"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/fruit"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/fruit"
            android:padding="20dp"
            android:text="@string/fruit"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/snack"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/snack"
            android:padding="20dp"
            android:text="@string/snack"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/book"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/book"
            android:padding="20dp"
            android:text="@string/book"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/study"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/study"
            android:padding="20dp"
            android:text="@string/study"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/house"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/house"
            android:padding="20dp"
            android:text="@string/house"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/investment"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/investment"
            android:padding="20dp"
            android:text="@string/investment"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/social"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/social"
            android:padding="20dp"
            android:text="@string/social"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/amusement"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/amusement"
            android:padding="20dp"
            android:text="@string/amusement"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/makeup"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/makeup"
            android:padding="20dp"
            android:text="@string/makeup"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/call"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/call"
            android:padding="20dp"
            android:text="@string/call"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/sport"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/sport"
            android:padding="20dp"
            android:text="@string/sport"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/redpacket"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/redpacket"
            android:padding="20dp"
            android:text="@string/redpacket"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/travel"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/travel"
            android:padding="20dp"
            android:text="@string/travel"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/medicine"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/medicine"
            android:padding="20dp"
            android:text="@string/medicine"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/office"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/office"
            android:padding="20dp"
            android:text="@string/office"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/digit"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/digit"
            android:padding="20dp"
            android:text="@string/digit"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/gift"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/gift"
            android:padding="20dp"
            android:text="@string/gift"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/wine"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/wine"
            android:padding="20dp"
            android:text="@string/wine"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/repair"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/repair"
            android:padding="20dp"
            android:text="@string/repair"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />

        <TextView
            android:id="@+id/other"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/other"
            android:padding="20dp"
            android:text="@string/other"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:theme="@style/body_text" />
    </GridLayout>
</LinearLayout>

