<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/incomeType"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="4"
        android:rowCount="2"
        >
    <TextView
        android:id="@+id/salary"
        android:drawableTop="@drawable/salary"
        android:drawablePadding="10dp"
        android:padding="20dp"
        android:text="@string/salary"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:theme="@style/body_text" />
    <TextView
        android:id="@+id/redpacket"
        android:drawableTop="@drawable/redpacket"
        android:drawablePadding="10dp"
        android:padding="20dp"
        android:text="@string/redpacket"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:theme="@style/body_text" />
    <TextView
        android:id="@+id/parttime"
        android:drawableTop="@drawable/parttime"
        android:drawablePadding="10dp"
        android:padding="20dp"
        android:text="@string/parttime"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:theme="@style/body_text" />
    <TextView
        android:id="@+id/other"
        android:drawableTop="@drawable/other"
        android:drawablePadding="10dp"
        android:padding="20dp"
        android:text="@string/other"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:theme="@style/body_text" />

    </GridLayout>
</LinearLayout>