<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phonelayout"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="phone"
            android:hint="@string/phoneHint"
            android:textColor="@color/hint"
            android:textColorHint="@color/hintDark"/>
        <Button
            android:id="@+id/sendBTN"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            />

    </LinearLayout>

    <EditText
        android:layout_below="@id/phonelayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/safecode"
        android:textColor="@color/hint"
        android:hint="@string/safecodeHint"
        android:textColorHint="@color/hintDark"/>
</RelativeLayout>