<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/fontColorLight">

    <LinearLayout
        android:id="@+id/select_pay_income_chart"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/topbar"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/income"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/expense"
            android:textColor="@color/fontColorDark"
            android:theme="@style/title_text" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/hint" />
        <TextView
            android:id="@+id/expense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/income"
            android:textColor="@color/fontColorDark"
            android:theme="@style/title_text" />
    </LinearLayout>
    <View
        android:id="@+id/divider0"
        android:layout_below="@id/select_pay_income_chart"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hint" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_below="@id/divider0"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/day"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day"
            android:textColor="@color/fontColor"
            android:textSize="16sp" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/hint" />
        <TextView
            android:id="@+id/month"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/month"
            android:textColor="@color/fontColor"
            android:textSize="16sp" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/hint" />
        <TextView
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/year"
            android:textColor="@color/fontColor"
            android:textSize="16sp" />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <lecho.lib.hellocharts.view.LineChartView
                android:id="@+id/line_chart"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="50dp"/>
            <lecho.lib.hellocharts.view.PieChartView
                android:id="@+id/pie_chart"
                android:layout_width="match_parent"
                android:layout_height="285dp"
                android:layout_margin="40dp"
                />
            <View
                android:layout_height="75dp"
                android:layout_width="match_parent"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>